style.css
body {
  margin: 0;
  font-family: Arial, sans-serif;
  background: #0b0f0c;
  color: #e5e7eb;
  text-align: center;
  line-height: 1.6;
}

/* Navbar */
.navbar {
  background: rgba(2, 6, 23, 0.8);
  backdrop-filter: blur(10px);
}

.logo {
  font-size: 1.5rem;
  font-weight: bold;
  color: #22c55e;
}

.nav-links {
  list-style: none;
  display: flex;
  gap: 20px;
}

.nav-links a {
  text-decoration: none;
  color: #e5e7eb;
}

.nav-links a:hover {
  color: #22c55e;
}

/* Buttons */
.auth-buttons button {
  margin-left: 10px;
  padding: 8px 15px;
  border-radius: 6px;
  border: none;
  cursor: pointer;
}

.login {
  background: transparent;
  border: 1px solid #22c55e;
  color: #22c55e;
}

.signup {
  background: #22c55e;
  color: black;
}

/* Header */
.hero {
  padding: 80px 20px;
  text-align: center;
}

.hero h1 {
  font-size: 3.5rem;
  max-width: 700px;
  margin: auto;
  font-weight: bold;
}

.hero p {
  margin: 20px auto;
  font-size: 2rem;
  font-weight: bold;
  color: #9ca3af;
  max-width: 600px;
  text-align: centre;
}

.hero-buttons {
  margin-top: 30px;
}

.primary-btn {
  padding: 12px 24px;
  background: #22c55e;
  color: white;
  border: none;
  border-radius: 8px;
  margin-right: 10px;
  cursor: pointer;
}

.secondary-btn {
  padding: 12px 24px;
  background: transparent;
  border: 1px solid #22c55e;
  color: #22c55e;
  border-radius: 8px;
  cursor: pointer;
}

.stats {
  margin-top: 40px;
  display: flex;
  justify-content: center;
  gap: 40px;
  flex-wrap: wrap;
}

.stats h2 {
  font-size: 1.8rem;
  color: #22c55e;
}

.stats p {
  font-size: 0.9rem;
  color: #9ca3af;
}

/* Main buttons */
.btn {
  margin: 20px;
  padding: 12px 20px;
  border: none;
  border-radius: 8px;
  background: #16a34a;
  color: white;
  cursor: pointer;
  font-weight: bold;
}

/* Sections */
.section {
  padding: 40px 20px;
}

/* Cards */
.card {
  background: #111827;
  margin: 20px auto;
  padding: 20px;
  border-radius: 10px;
  max-width: 300px;
  border: 1px solid #1f2937;
}

